--- a/src/views/VotingResult/ListMembersDialog/ListMembersDialog.css
+++ b/src/views/VotingResult/ListMembersDialog/ListMembersDialog.css
@@ -18,8 +18,13 @@
 
 @import "../../../assets/css/mixins.css";
 
+.overflow {
+  max-height: 43vh;
+  overflow: auto;
+}
+
 .list-member {
-  padding: 1rem 2rem;
+  padding: 1rem 2rem 0;
 
   & .title {
     align-self: center;
